# voice-search-with-whisper-duckdb-and-metaphone

./: .gitignore  LICENSE  README.md  index.py  main.py  pyproject.toml  search.py  wines.csv  wines.duckdb
